CHATS_SIT/force-app/main/default/objects/t_sbsd_cs_indv_role_hst__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_indiv_role_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_indiv_role_hist</externalName>
    <fields>
        <fullName>cde_role_case__c</fullName>
        <description>cde_role_case</description>
        <externalDeveloperName>cde_role_case</externalDeveloperName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Number Caseuence caseory</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case_indiv_role__c</fullName>
        <description>idn_case_indiv_role</description>
        <externalDeveloperName>idn_case_indiv_role</externalDeveloperName>
        <label>identifier case indiv role</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_INDIV_ROLE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_INDIV_ROLE__c</referenceTo>
        <relationshipLabel>Case Individual Role Legacy History</relationshipLabel>
        <relationshipName>t_sbsd_cs_indv_role_hst</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_case_indiv_role_hist__c</fullName>
        <description>idn_case_indiv_role_hist</description>
        <externalDeveloperName>idn_case_indiv_role_hist</externalDeveloperName>
        <label>identifier case indiv role history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Number Clientuence clientory</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>t_sbsd_case_indiv_role_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_indiv_case__c</fullName>
        <description>nbr_seq_indiv_case</description>
        <externalDeveloperName>nbr_seq_indiv_case</externalDeveloperName>
        <label>Number Sequence Indiv case</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_role_case__c</fullName>
        <description>nbr_seq_role_case</description>
        <externalDeveloperName>nbr_seq_role_case</externalDeveloperName>
        <label>Number Sequence Role Case</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Individual Role History</label>
    <pluralLabel>Case Individual Role History</pluralLabel>
</CustomObject>